# bitcoin_agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
docs/: 01_architecture.md  02_state_flow.md  03_prompt_guide.md
prompts/: analysis.md  planner.md  reflection.md
src/bitcoin_agent/: graph.py  settings.py  state.py
src/bitcoin_agent/agents/: analysis.py  planner.py  reflection.py
src/bitcoin_agent/tools/: market_data.py  search.py  technical_analysis.py
