[tool.poetry]
name = "bitcoin_agent"
version = "0.1.0"
description = "LangGraph 기반의 ReAct + Reflection 비트코인 트렌드 분석 Agent"
authors = ["Your Name <your-email@example.com>"]
readme = "README.md"
packages = [{include = "src/bitcoin_agent"}]

[tool.poetry.dependencies]
python = "^3.10" # 최소 Python 버전 (LangChain 호환성 기준)

# --- LangChain & LangGraph Core ---
langchain = "^0.2.0"
langgraph = "^0.1.0"
langchain-openai = "^0.1.7" # ChatOpenAI

# --- 환경 변수 로드 ---
python-dotenv = "^1.0.1" # run.py에서 .env 로드용

# --- Tools 의존성 ---
google-search-results = "^2.4.2" # SerpAPI 라이브러리
yfinance = "^0.2.37" # tools/market_data.py
pandas = "^2.2.2" # [수정] 최신 2.x 버전으로 복귀

# [핵심 수정]
# PyPI의 오래된 버전(0.3.14b0) 대신, 최신 Python과 pandas를 지원하는
# GitHub 리포지토리의 'main' 브랜치에서 직접 설치합니다.
pandas-ta = {git = "https://github.com/twopirllc/pandas-ta.git", rev = "master"} # Poetry 방식은 회사의 네트워크의 방화벽에 걸리므로 개인 가상 환경을 통해 설치 권장.
# 또는 보안상 오류를 피하기 위해 pandas-ta를 pip install C:\Users\SKAX\Downloads\pandas-ta-master.zip와 같이 소스 코드를 직접 다운로드하여 설치.


# --- (선택) LangChain 모니터링 ---
# langsmith = "^0.1.50" # Agent 디버깅 및 추적 (강력 추천)


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"